fix loading spinner overflowing

--- a/app/assets/stylesheets/message_index.scss
+++ b/app/assets/stylesheets/message_index.scss
@@ -7,7 +7,7 @@
 }
 
 .message-index-overflow-wrapper {
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
   height: calc(100% - 65px);
   width: calc(100% - 2px);
